--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-google-generativeai==0.8.5
-matplotlib==3.10.3
-numpy==2.0.0
-pandas==2.2.2
-plotly==6.1.2
-streamlit==1.36.0
-streamlit-aggrid==1.1.5.post1
-tqdm==4.67.1
-xlsxwriter==3.2.5
+google-generativeai
+matplotlib
+numpy
+pandas
+plotly
+streamlit
+streamlit-aggrid
+tqdm
+xlsxwriter
+seaborn
